[gd_scene load_steps=11 format=2]

[ext_resource path="res://Troops/NPC Troop/Troop.gd" type="Script" id=1]
[ext_resource path="res://Weapons/NPC Troop/Gun/TroopGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Troops/NPC Troop/TroopPathMaker.gd" type="Script" id=3]
[ext_resource path="res://Troops/NPC Troop/TroopEnemyDetection.gd" type="Script" id=4]
[ext_resource path="res://Health System/HealthSystem.tscn" type="PackedScene" id=5]
[ext_resource path="res://Troops/TroopManager/TroopManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://Troops/NPC Troop/TroopNetwork.gd" type="Script" id=7]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.6
mid_height = 1.8

[sub_resource type="CapsuleShape" id=2]
radius = 0.6
height = 1.8

[sub_resource type="BoxShape" id=3]
extents = Vector3( 7, 3, 11 )

[node name="Troop" type="StaticBody" groups=[
"Troops",
]]
pause_mode = 1
collision_layer = 2
collision_mask = 25
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Weapons" type="Spatial" parent="."]

[node name="TroopGun" parent="Weapons" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.5, -0.3 )

[node name="PathMaker" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EnemyDetection" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Area" type="Area" parent="EnemyDetection"]

[node name="CollisionShape" type="CollisionShape" parent="EnemyDetection/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -6 )
shape = SubResource( 3 )

[node name="HealthSystem" parent="." instance=ExtResource( 5 )]

[node name="TroopManager" parent="." instance=ExtResource( 6 )]

[node name="TroopNetwork" type="Node" parent="."]
script = ExtResource( 7 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ConquestTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="ConquestTimer" to="." method="_on_ConquestTimer_timeout"]
